tests/data/placebo/test_cidrip_security_group_ec2/ec2.DescribeTags_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200
        }, 
        "Tags": []
    }
}
